wrapper correcttion mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 
 .wrapper{
   width: 80vw;
+  max-width: 1280px;
   margin: 0 auto;
 }
 
